A......... [ZBX-3783] prohibited deleting discovery rules which are used in actions (Sasha)
A......... [ZBX-3783] added audit for action.delete() and correlation.delete() methods (Sasha)
..F....... [ZBXNEXT-4143] implemented submenu autofocus on top-level menu click (nikita)
..F....... [ZBXNEXT-4414] added support for configurable number of displayed tags (agriscenko)

Bug fixes:
..F....... [ZBX-13240] removed duplicating HTML IDs from frontend and fixed SID validation in trigger wizard (Ivo)
..F....... [ZBX-13685] fixed maintenance entries displayed in list when filter is applied (agriscenko)
....I..... [ZBX-12756] improved configure script to check iconv library (MVekslers)
........S. [ZBX-13667] added notification in zabbix server log about 'error' in elasticsearch json response (MVekslers)
..F....... [ZBX-13683] fixed multiselect items not being sorted by name (agriscenko)
........S. [ZBX-13299] fixed autoregistration, discovery and internal notifications not being sent due to uninitialized severity (vso)
....I..... [ZBX-13607] changed ping script to return success also for timeouts (wiper)
..F....... [ZBX-12967] fixed slide show refresh interval multiplier menu not working (agriscenko)
........S. [ZBX-13696] added maximum record limit to old session removal in housekeeper (wiper)
..F....... [ZBX-13642] fixed undefined index in user edit form (agriscenko)
..F....... [ZBX-13546] fixed context menu positioning in maps (gcalenko, miks)
..F....... [ZBX-13668] fixed dynamic widget searching for item key in item prototypes (agriscenko)
..F....... [ZBX-13500] fixed fractional values in triggers being misinterpreted without a leading 0 (agriscenko)
..F....... [ZBX-13561] fixed incorrectly displayed pie graph when first item has no data (Ivo)
..F....... [ZBX-13517] fixed undefined index in pie charts (Ivo)
..F....... [ZBX-13499] fixed checkbox selector in problems table (ashubin, miks)